--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "ryangjchandler/filament-profile": "^0.2.0"
+        "livewire/livewire": "^2.10",
+        "ryangjchandler/filament-profile": "^0.2.0",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
