--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.10.2",
+        "@tailwindcss/forms": "^0.4.1",
+        "@tailwindcss/typography": "^0.5.4",
+        "alpinejs": "^3.10.2",
         "axios": "^0.25",
-        "laravel-vite-plugin": "^0.2.1",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^2.9.11"
+        "postcss-import": "^14.0.1",
+        "tailwindcss": "^3.1.6"
+    },
+    "dependencies": {
+        "@sentry/browser": "^7.5.1",
+        "@sentry/tracing": "^7.5.1",
+        "autoprefixer": "10.4.5",
+        "choices.js": "^10.1.0",
+        "tw-elements": "^1.0.0-alpha12"
     }
 }
