--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "blade-ui-kit/blade-icons": "^1.3",
+        "blade-ui-kit/blade-ui-kit": "^0.3.4",
+        "codeat3/blade-fluentui-system-icons": "^1.31",
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
