--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "alperenersoy/filament-export": "^0.1.7",
         "blade-ui-kit/blade-icons": "^1.3",
         "blade-ui-kit/blade-ui-kit": "^0.3.4",
         "codeat3/blade-fluentui-system-icons": "^1.31",
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "konnco/filament-import": "^1.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "ryangjchandler/filament-profile": "^0.2.0",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "stevebauman/purify": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
