Fixed URL Encoding for QR Codes

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "hashids/hashids": "^4.1",
         "humaidem/filament-map-picker": "^0.1.3",
         "konnco/filament-import": "^1.2",
         "laravel/framework": "^9.19",
